--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 /cmake-build-debug/
 /cmake-build-release/
+/dependencies/glad/*
+/dependencies/glfw/*
+!dependencies/glad/info.txt
+!dependencies/gfw/info.txt
 **/.DS_STORE
 /.idea/
